# whisper-plus

./: .gitignore  .pre-commit-config.yaml  README.md  benckmarks.md  dev-requirements.txt  requirements.txt  setup.cfg  setup.py  speaker_diarization.txt  test.py
.github/: FUNDING.yml
.github/workflows/: ci.yml  package_testing.yml  publish_pypi.yml
RAG/: chatbot.py
bark/: text_to_speech.py
doc/benchmarks/: whisper_benckmarks.md
jupyternotebook/: whisperplusnotebook.ipynb
notebook/: demo.ipynb
scripts/: package.py  runpod.sh
tests/: test_long_text_support_summarization.py
whisperplus/: __init__.py  app.py  audio_eval.py  cli.py  demo.py  rag_main.py  test.py
whisperplus/apple_pipeline/mlx_whisper/: benchmark.py  convert.py  decoding.py  load_models.py  timing.py  tokenizer.py  transcribe.py  whisper.py
whisperplus/model/: load_model.py
whisperplus/pipelines/: autollm_chatbot.py  chatbot.py  long_text_summarization.py  long_text_support_summarization.py  summarization.py  text2speech.py  whisper.py  whisper_autocaption.py  whisper_diarize.py
whisperplus/pipelines/lightning_whisper_mlx/: __init__.py  audio.py  decoding.py  lightning.py  load_models.py  timing.py  tokenizer.py  torch_whisper.py  transcribe.py  whisper.py
whisperplus/pipelines/mlx_whisper/: __init__.py  audio.py  convert.py  decoding.py  load_models.py  tokenizer.py  transcribe.py  whisper.py
whisperplus/pipelines/mlx_whisper/assets/: gpt2.tiktoken
whisperplus/utils/: download_utils.py  text_utils.py
