[metadata]
license_files = LICENSE
description_file = README.md

[flake8]
max_line_length = 110
exclude = .tox,*.egg,build,temp,.git,.vscode,__pycache__
recursive = true
doctests = True
verbose = 2
inline-quotes = double
# https://pep8.readthedocs.io/en/latest/intro.html#error-codes
format = pylint
# see: https://www.flake8rules.com/
ignore = F401,E731,E402,W504,E501
    # E731: Do not assign a lambda expression, use a def
    # F405: name may be undefined, or defined from star imports: module
    # E402: module level import not at top of file
    # W504: line break after binary operator
    # E501: line too long
    # removed:
    # F401: module imported but unused
    # E231: missing whitespace after ‘,’, ‘;’, or ‘:’
    # E127: continuation line over-indented for visual indent
    # F403: ‘from module import *’ used; unable to detect undefined names


[isort]
# https://pycqa.github.io/isort/docs/configuration/options.html
line_length = 110
multi_line_output = 3
include_trailing_comma = true

[yapf]
based_on_style = pep8
spaces_before_comment = 2
COLUMN_LIMIT = 110
SPLIT_BEFORE_FIRST_ARGUMENT = true
COALESCE_BRACKETS = true
SPLIT_BEFORE_LOGICAL_OPERATOR = false

[docformatter]
wrap-summaries = 110
wrap-descriptions = 110
in-place = true
make-summary-multi-line = false
pre-summary-newline = true
force-wrap = false
close-quotes-on-newline = true
